platform/deploy/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zeaz-platform
  labels:
    istio.io/dataplane-mode: ambient
    spiffe.io/spire-managed-identity: "true"
